# dig2crawl

./: .gitignore  Cargo.toml  LICENSE  README.md
configs/: example.toml
crates/agent/: Cargo.toml
crates/agent/src/: bridge.rs  lib.rs  memory.rs  prompts.rs  protocol.rs  session.rs  spawn.rs
crates/config/: Cargo.toml
crates/config/src/: daemon_spec.rs  job.rs  lib.rs  profile.rs
crates/core/: Cargo.toml
crates/core/src/: budget.rs  config.rs  engine.rs  error.rs  extract.rs  queue.rs  scheduler.rs  traits.rs  types.rs
crates/fetch/: Cargo.toml
crates/fetch/src/: browser.rs  cache.rs  http.rs  lib.rs  proxy.rs  retry.rs
crates/parser/: Cargo.toml
crates/parser/src/: antibot.rs  jsonld.rs  lib.rs  links.rs  metadata.rs  selector.rs
crates/storage/: Cargo.toml
crates/storage/src/: db.rs  export.rs
src/: lib.rs  main.rs
src/agent/: actions.rs  bridge.rs  captcha.rs  memory.rs  mod.rs  prompts.rs  protocol.rs  session.rs  spawn.rs  visual.rs
src/config/: daemon_spec.rs  job.rs  mod.rs
src/core/: config.rs  engine.rs  error.rs  extract.rs  mod.rs  queue.rs  scheduler.rs  traits.rs  types.rs
src/fetch/: browser.rs  cache.rs  http.rs  interactive.rs  mod.rs  proxy.rs  retry.rs
src/parser/: json_data.rs  mod.rs  selector.rs
src/storage/: db.rs  export.rs  mod.rs
