[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.2.0"
license = "MIT"

[workspace.dependencies]
tokio          = { version = "1", features = ["full"] }
reqwest        = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
toml           = "0.8"
url            = { version = "2", features = ["serde"] }
thiserror      = "2"
anyhow         = "1"
uuid           = { version = "1", features = ["v4", "serde"] }
chrono         = { version = "0.4", features = ["serde"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
governor       = "0.8"
futures        = "0.3"
smol_str       = { version = "0.3", features = ["serde"] }
ahash          = "0.8"
scraper        = "0.22"
rusqlite       = { version = "0.31", features = ["bundled"] }
csv            = "1.3"
regex          = "1"
clap           = { version = "4", features = ["derive"] }
tempfile       = "3"
rand           = "0.8"
dig2browser    = { path = "../dig2browser" }

crawl-core          = { path = "crates/core" }
crawl-fetch         = { path = "crates/fetch" }
crawl-agent         = { path = "crates/agent" }
crawl-storage       = { path = "crates/storage" }
dig2crawl-config    = { path = "crates/config" }
dig2crawl-parser    = { path = "crates/parser" }

[package]
name = "dig2crawl"
edition.workspace = true
version.workspace = true

[[bin]]
name = "dig2crawl"
path = "src/main.rs"

[dependencies]
crawl-core.workspace = true
crawl-fetch.workspace = true
crawl-agent.workspace = true
crawl-storage.workspace = true
dig2crawl-parser.workspace = true
dig2crawl-config.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
serde_json.workspace = true
serde.workspace = true
chrono.workspace = true
url.workspace = true
dig2browser.workspace = true
rusqlite.workspace = true
toml.workspace = true
