[package]
name = "dig2crawl"
version = "0.3.20"
edition = "2021"
license = "MIT"
description = "Universal agnostic web crawler with Claude-powered CSS selector discovery"
repository = "https://github.com/ZENG3LD/dig2crawl"

[[bin]]
name = "dig2crawl"
path = "src/main.rs"

[[bin]]
name = "cookie-auth"
path = "src/bin/cookie_auth.rs"

[lib]
name = "dig2crawl"
path = "src/lib.rs"

[dependencies]
tokio          = { version = "1", features = ["full"] }
reqwest        = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
toml           = "0.8"
url            = { version = "2", features = ["serde"] }
thiserror      = "2"
anyhow         = "1"
uuid           = { version = "1", features = ["v4", "serde"] }
chrono         = { version = "0.4", features = ["serde"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
governor       = "0.8"
futures        = "0.3"
smol_str       = { version = "0.3", features = ["serde"] }
ahash          = "0.8"
scraper        = "0.22"
rusqlite       = { version = "0.31", features = ["bundled"] }
csv            = "1.3"
regex          = "1"
clap           = { version = "4", features = ["derive"] }
tempfile       = "3"
rand           = "0.8"
dig2browser    = "0.4"
gate4agent     = "=0.2.0"

[workspace]
