[package]
name = "crawl-agent"
edition.workspace = true
version.workspace = true

[dependencies]
crawl-core.workspace = true
futures.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
tempfile.workspace = true
