[package]
name = "crawl-agent"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Claude agent session for dig2crawl selector discovery"
repository = "https://github.com/ZENG3LD/dig2crawl"

[dependencies]
crawl-core.workspace = true
futures.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
tempfile.workspace = true
