[package]
name = "dig2crawl-config"
edition.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
chrono.workspace = true
thiserror.workspace = true
crawl-core.workspace = true
