[package]
name = "crawl-fetch"
edition.workspace = true
version.workspace = true

[dependencies]
crawl-core.workspace = true
tokio.workspace = true
reqwest.workspace = true
url.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
dig2browser.workspace = true
futures.workspace = true
rand.workspace = true
