[package]
name = "crawl-fetch"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "HTTP and browser fetchers for dig2crawl"
repository = "https://github.com/ZENG3LD/dig2crawl"

[dependencies]
crawl-core.workspace = true
tokio.workspace = true
reqwest.workspace = true
url.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
dig2browser.workspace = true
futures.workspace = true
rand.workspace = true
