[package]
name = "dig2crawl-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
scraper     = { version = "0.22" }
serde       = { workspace = true }
serde_json  = { workspace = true }
regex       = { workspace = true }
tracing     = { workspace = true }
url         = { workspace = true }
crawl-core  = { workspace = true }
