[package]
name = "dig2crawl-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTML parser, selector extractor, and metadata extraction for dig2crawl"
repository = "https://github.com/ZENG3LD/dig2crawl"

[dependencies]
scraper     = { version = "0.22" }
serde       = { workspace = true }
serde_json  = { workspace = true }
regex       = { workspace = true }
tracing     = { workspace = true }
url         = { workspace = true }
crawl-core  = { workspace = true }
